--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile(group: 'com.expediagroup', name: 'graphql-kotlin-schema-generator', version: "2.0.0-RC12.1")
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "io.ktor:ktor-jackson:$ktor_version"
+
 }
 
 
