--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compile(group: 'com.expediagroup', name: 'graphql-kotlin-schema-generator', version: "2.0.0-RC12.1")
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "io.ktor:ktor-jackson:$ktor_version"
-
+    implementation "io.ktor:ktor-auth:$ktor_version"
 }
 
 
