--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "mysql:mysql-connector-java:6.0.6"
     }
 }
 
@@ -42,6 +43,10 @@ dependencies {
     implementation "io.ktor:ktor-jackson:$ktor_version"
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-client-apache:$ktor_version"
+    compile "org.jetbrains.exposed:exposed-core:0.22.1"
+    compile "org.jetbrains.exposed:exposed-dao:0.22.1"
+    compile "org.jetbrains.exposed:exposed-jdbc:0.22.1"
+    implementation "mysql:mysql-connector-java:6.0.6"
 }
 
 
