--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile "org.jetbrains.exposed:exposed-core:0.21.1"
     compile "org.jetbrains.exposed:exposed-dao:0.21.1"
     compile "org.jetbrains.exposed:exposed-jdbc:0.21.1"
+    compile "org.jetbrains.exposed:exposed-java-time:0.21.1"
     implementation "mysql:mysql-connector-java:6.0.6"
     compile 'com.google.api-client:google-api-client:1.30.5'
 }
