Auth seems to work

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,12 @@ dependencies {
     compile "org.jetbrains.exposed:exposed-java-time:0.21.1"
     implementation "mysql:mysql-connector-java:6.0.6"
     compile 'com.google.api-client:google-api-client:1.30.5'
+
+    compile 'io.jsonwebtoken:jjwt-api:0.11.1'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
+            // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
+            //'org.bouncycastle:bcprov-jdk15on:1.60',
+            'io.jsonwebtoken:jjwt-jackson:0.11.1' // or 'io.jsonwebtoken:jjwt-gson:0.11.1' for gson
 }
 
 
