--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation "io.ktor:ktor-jackson:$ktor_version"
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-client-apache:$ktor_version"
+    implementation "io.ktor:ktor-websockets:$ktor_version"
+
     compile "org.jetbrains.exposed:exposed-core:0.21.1"
     compile "org.jetbrains.exposed:exposed-dao:0.21.1"
     compile "org.jetbrains.exposed:exposed-jdbc:0.21.1"
